frontend: fix DevAlert contrast

--- a/packages/iris-frontend/src/components/DevAlert.css
+++ b/packages/iris-frontend/src/components/DevAlert.css
@@ -3,8 +3,8 @@
 
 	background-image: repeating-linear-gradient(
 		-45deg,
-		transparent,
-		transparent 10px,
+		white,
+		white 10px,
 		red 10px,
 		red 20px
 	);
